--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,19 @@ script:
   # Ejecutamos el role/playbook de nuevo, asegurándonos de que es idempotent.
   - "ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo | grep -q 'changed=0.*failed=0' && (echo 'Test Idempotence: pasado' && exit 0) || (echo 'Test Idempotence: fallo' && exit 1)"
 
+  # Check to make sure we can connect to MySQL via Unix socket.
+#  - >
+#    sudo mysql -u root -proot -e 'show databases;'
+#    | grep -q 'information_schema'
+#    && (echo 'MySQL running normally' && exit 0)
+#    || (echo 'MySQL not running' && exit 1)
+#  # Check to make sure we can connect to MySQL via TCP.
+#  - >
+#    sudo mysql -u root -proot -h 127.0.0.1 -e 'show databases;'
+#    | grep -q 'information_schema'
+#    && (echo 'MySQL running normally' && exit 0)
+#    || (echo 'MySQL not running' && exit 1)
+
   # Notificamos del estado a Galaxy
 notifications:
     webhooks: https://galaxy.ansible.com/api/v1/notifications/
