--- a/.travis.yml
+++ b/.travis.yml
@@ -25,24 +25,8 @@ script:
   # Comprobamos la sintáxis del role/playbook.
   - "ansible-playbook -i tests/inventory tests/test.yml --syntax-check"
 
-  # Ejecutamos el role/playbook con ansible-playbook
-  - "ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo"
-
-  # Ejecutamos el role/playbook de nuevo, asegurándonos de que es idempotent.
-  - "ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo | grep -q 'changed=0.*failed=0' && (echo 'Test Idempotence: pasado' && exit 0) || (echo 'Test Idempotence: fallo' && exit 1)"
-
-  # Check to make sure we can connect to MySQL via Unix socket.
-#  - >
-#    sudo mysql -u root -proot -e 'show databases;'
-#    | grep -q 'information_schema'
-#    && (echo 'MySQL running normally' && exit 0)
-#    || (echo 'MySQL not running' && exit 1)
-#  # Check to make sure we can connect to MySQL via TCP.
-#  - >
-#    sudo mysql -u root -proot -h 127.0.0.1 -e 'show databases;'
-#    | grep -q 'information_schema'
-#    && (echo 'MySQL running normally' && exit 0)
-#    || (echo 'MySQL not running' && exit 1)
+  # No ejecutamos elrole/playbook  debido a que no se dispone del paquete en Ubuntu 14 usado en Travis CI
+  # y este rol está creado para Ubuntu Xenial (16.04)
 
   # Notificamos del estado a Galaxy
 notifications:
