--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,13 +4,13 @@ mariadb_version: 10.1.22
 mariadb_service_name: mysql
 mariadb_secure_installation: True
 
-mariadb_root_password:
+mariadb_root_password: changeme
 
 mariadb_server_path_utiles: /root/utiles
 
 mariadb_path_backups: /home/db_backups/
 
-mariadb_databases:
+mariadb_databases: []
 
 mariadb_options:
   bind_address: '127.0.0.1'
@@ -32,7 +32,7 @@ mariadb_options:
   read_rnd_buffer_size: 4M
   key_buffer: 500M
 
-mariadb_utiles_bd: true
+mariadb_utiles_bd: false
 
 mariadb_cron_backup_db:
   minute: "15"
