--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,6 +33,12 @@ mariadb_options:
   key_buffer: 500M
 
 mariadb_utiles_bd: false
+mariadb_cron_backup: false
+mariadb_cron_optimizacion: false
+
+mariadb_phpmyadmin: false
+mariadb_phpmyadmin_url: "https://github.com/phpmyadmin/phpmyadmin/archive/master.zip"
+mariadb_phpmyadmin_root_path: "/home/webs"
 
 mariadb_cron_backup_db:
   minute: "15"
