--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,7 +37,7 @@ mariadb_cron_backup: false
 mariadb_cron_optimizacion: false
 
 mariadb_phpmyadmin: false
-mariadb_phpmyadmin_url: "https://github.com/phpmyadmin/phpmyadmin/archive/master.zip"
+mariadb_phpmyadmin_url: "https://github.com/phpmyadmin/phpmyadmin.git"
 mariadb_phpmyadmin_root_path: "/home/webs"
 
 mariadb_cron_backup_db:
