--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,7 +79,7 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - mariadb_databases
+    - "{{ mariadb_databases }}"
 
 - name: Creamos los usuarios de Bases de Datos.
   mysql_user:
@@ -88,7 +88,7 @@
     priv: "{{ item.priv }}"
     state: present
   with_items:
-    - mariadb_users
+    - "{{ mariadb_users }}"
 
 - name: Creamos el directorio de utilidades.
   file:
