--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,18 +17,18 @@ mariadb_databases: []
 
 mariadb_users: []
 # delete [] and define databases
-# - user1:
-#      name: "usuario1"
-#      password: "clave1"
-#      priv: "*.*:ALL"
-# - user2:
-#      name: "usuario2"
-#      password: "clave2"
-#      priv: "db.table:priv1,priv2"
-# - user3:
-#      name: "usuario3"
-#      password: "clave3"
-#      priv: "bdpruebas.*:ALL"
+# user1:
+#    name: "usuario1"
+#    password: "clave1"
+#    priv: "*.*:ALL"
+# user2:
+#    name: "usuario2"
+#    password: "clave2"
+#    priv: "db.table:priv1,priv2"
+# user3:
+#    name: "usuario3"
+#    password: "clave3"
+#    priv: "bdpruebas.*:ALL"
 
 mariadb_options:
   bind_address: '127.0.0.1'
