--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,12 @@
 galaxy_info:
+  role_name: mariadb
   author: Carlos Longarela
   description: Installation, secure and configuration for MariaDB Server.
-  company: Desarrollo web Carlos Longarela
+  company: Taberna WordPress
 
-  license: license GPLv2
+  license: GPLv3
 
-  min_ansible_version: 1.8
+  min_ansible_version: 2.5
 
   platforms:
    - name: Ubuntu
